# bazel-vscode-java-bridge

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
bazel-jdt-bridge/: AGENTS.md  Cargo.toml
bazel-jdt-bridge/.github/workflows/: ci.yml  release.yml
bazel-jdt-bridge/crates/bazel-aspect/: Cargo.toml
bazel-jdt-bridge/crates/bazel-aspect/src/: ide_info.rs  lib.rs  text_proto.rs
bazel-jdt-bridge/crates/bazel-cache/src/: redb_store.rs
bazel-jdt-bridge/crates/bazel-graph/: Cargo.toml
bazel-jdt-bridge/crates/bazel-graph/src/: classpath.rs  graph.rs  lib.rs
bazel-jdt-bridge/crates/bazel-jdt-core/: Cargo.toml
bazel-jdt-bridge/crates/bazel-jdt-core/src/: aspect.rs  change_detector.rs  jni_exports.rs  lib.rs  state.rs  watcher.rs
bazel-jdt-bridge/crates/bazel-jdt-core/src/aspects/: artifacts.bzl  intellij_info_bundled.bzl  intellij_info_impl_bundled.bzl
bazel-jdt-bridge/crates/bazel-jdt-core/tests/: integration.rs
bazel-jdt-bridge/crates/bazel-parser/src/: parser.rs
bazel-jdt-bridge/crates/bazel-query/: Cargo.toml
bazel-jdt-bridge/crates/bazel-query/src/: command.rs  lib.rs  output.rs
bazel-jdt-bridge/java-bridge/: bnd.bnd  pom.xml
bazel-jdt-bridge/java-bridge/src/main/java/com/bazel/jdt/: BazelActivator.java  BazelBridge.java  BazelBuildSupport.java  BazelClasspathContainer.java  BazelClasspathContainerInitializer.java  (+16 more)
bazel-jdt-bridge/java-bridge/src/main/resources/: plugin.xml
bazel-jdt-bridge/java-bridge/src/main/resources/native/darwin-arm64/: libbazel_jdt_core.dylib
bazel-jdt-bridge/scripts/: build-for-debug.sh  build-native.sh  capture-jdtls-threadump.sh  package-extension.sh
bazel-jdt-bridge/tests/e2e/suite/: dependency-resolution.test.ts
bazel-jdt-bridge/vscode-extension/: package-lock.json  package.json
bazel-jdt-bridge/vscode-extension/src/: bazelproject.ts  commands.ts  config.ts  debugAdapter.ts  extension.ts  importWizard.ts  statusBar.ts
(+23 files in other folders)
