[package]
name = "bazel-jdt-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
jni.workspace = true
bazel-parser = { path = "../bazel-parser" }
bazel-aspect = { path = "../bazel-aspect" }
bazel-query = { path = "../bazel-query" }
bazel-graph = { path = "../bazel-graph" }
bazel-cache = { path = "../bazel-cache" }
tokio.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
log.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
