[package]
name = "bazel-query"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
bazel-aspect = { path = "../bazel-aspect" }

[dev-dependencies]
tempfile.workspace = true
